# ece6122-final-project

./: .gitignore  CMakeLists.txt  README.md  account.cpp  account.h  accountHolder.cpp  accountHolder.h
Log_Functions/: CMakeLists.txt  main.cpp
Serialization/: Serialization.cpp  Serialization.h
Sockets/CreateClient/: ClientFunc.cpp  ClientFunc.h
Sockets/CreateServer/: ServerFunc.cpp  ServerFunc.h
Sockets/Serialization/: Serialization.cpp  Serialization.h  Serialize.cpp  Serialize.h
client/: client.cpp
client/ui/: driver.cpp  driver.h  home.cpp  home.h  landing.cpp  landing.h  page.cpp  page.h
server/: account.cpp  account.h  accountHolder.cpp  accountHolder.h  encryption.cpp  encryption.h  log.cpp  log.h  main.cpp  server.cpp
